--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_ENV=Production
+APP_KEY=base64:qJSVPOILeOW/sw0stCGfSxaR9QYr6pa/Cl4tiIf5A0I=
+APP_DEBUG=false
+APP_URL=https://docmap-linahis.online/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=docmap_cashiering-db
 DB_PORT=3306
-DB_DATABASE=cashiering_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=cashiering-db
+DB_USERNAME=mysql
+DB_PASSWORD=rootroot
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
